--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@ Jumping Jacks</textarea>
                      if (!isLastRound && restTime > 0) {
                         speak("Rest");
                     } else if (isLastRound && !isLastExercise && exerciseRestTime > 0) {
-                        speak("Exercise Complete. Rest.");
+                        const nextExerciseName = exerciseNames[currentExercise] || `Exercise ${currentExercise + 1}`;
+                        speak(`Exercise Complete. Next exercise: ${nextExerciseName}.`);
                     }
                 }
             } else if (state === 'roundRest') { 
                 if (currentTime === 5 && totalTimeForCurrentPhase >= 5) {
-                    const nextExerciseName = exerciseNames[currentExercise] || `Exercise ${currentExercise + 1}`;
-                    speak(`Next exercise: ${nextExerciseName}. 3, 2, 1`);
+                    speak(`3, 2, 1`);
                 } else if (currentTime > 0 && currentTime <= 3 && totalTimeForCurrentPhase < 5) {
                     speak(String(currentTime));
                 } else if (currentTime === 0 && totalTimeForCurrentPhase < 5) {
