--- a/index.html
+++ b/index.html
@@ -417,9 +417,7 @@ Jumping Jacks</textarea>
                     }
                 }
             } else if (state === 'roundRest') { 
-                if (currentTime === 5 && totalTimeForCurrentPhase >= 5) {
-                    speak(`3, 2, 1`);
-                } else if (currentTime > 0 && currentTime <= 3 && totalTimeForCurrentPhase < 5) {
+                if (currentTime > 0 && currentTime <= 3 && totalTimeForCurrentPhase < 5) {
                     speak(String(currentTime));
                 } else if (currentTime === 0 && totalTimeForCurrentPhase < 5) {
                     speak("Begin");
